--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  url: MyString
+  url: http://example.com
   title: MyString
   text: MyText
 
 two:
-  url: MyString
+  url: http://example.com
   title: MyString
   text: MyText
